--- a/_posts/2017-11-10-祝王总Janpan之行一切顺利、玩的开森.md
+++ b/_posts/2017-11-10-祝王总Janpan之行一切顺利、玩的开森.md
@@ -5,6 +5,6 @@ date: 2017-11-10
 tag: 祝贺
 ---
 
-#王総日本の旅の楽しみを祈ります
+#王総日本の旅の楽しみを祈ります，王総日本の旅の楽しみを祈ります，王総日本の旅の楽しみを祈ります，王総日本の旅の楽しみを祈ります，王総日本の旅の楽しみを祈ります^_^
 
 
